change to Arrays.asList() since CI is on Java 8